deployments/namespaces/backendpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backendpod
 namespace: backend
 labels:
  app: backendp
spec:
 replicas: 1
 selector: 
  matchLabels:
   app: backendp
 template:
  metadata:
    labels:
     app: backendp
  spec:
   serviceAccountName: utk
   automountServiceAccountToken: false
   volumes:
   - name: hostvolume
     hostPath:
      path: /var/www/html
   containers:
   - name: php
     image: php:7.2-apache
     command: ["/bin/sh", "-c"]
     args: ["service apache2 start; sleep infinity"]
     workingDir: /var/www/html
     ports:
      - name: serviceport
        containerPort: 80 
     volumeMounts: 
      - name: hostvolume
        mountPath: /var/www/html


---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: mainbackendpod
 namespace: backend
spec:
 replicas: 1
 selector: 
  matchLabels:
   app: mainbackendp
 template:
  metadata:
    labels:
     app: mainbackendp
  spec:
   serviceAccountName: utk
   automountServiceAccountToken: false
   volumes:
   - name: hostvolume
     hostPath:
      path: /var/www/html
   containers:
   - name: php
     image: php:7.2-apache
     command: ["/bin/sh", "-c"]
     args: ["service apache2 start; sleep infinity"]
     workingDir: /var/www/html
     ports:
      - name: serviceport
        containerPort: 80 
     volumeMounts: 
      - name: hostvolume
        mountPath: /var/www/html
