deployments/namespaces/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          project: backend

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
            project: internal
